# vibeship-optimizer

./: .gitignore  OPTIMIZATION_CHECKER.md  README.md  VIBESHIP_OPTIMIZER.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
openclaw_skill/optimization-checker/: SKILL.md
openclaw_skill/optimization-checker/references/: openclaw_cron_setup.md
openclaw_skill/vibeship-optimizer/: SKILL.md
openclaw_skill/vibeship-optimizer/references/: openclaw_cron_setup.md
src/optcheck/: analyze.py  autopilot.py  cli.py  configio.py  core.py  doctor.py  logbook.py  monitor.py  openclaw_integration.py  preflight.py  questionnaire.py  review.py  verify.py
src/vibeship_optimizer/: analyze.py  autopilot.py  cli.py  configio.py  core.py  doctor.py  llm_instructions.py  logbook.py  monitor.py  onboarding.py  openclaw_integration.py  preflight.py  review.py  verify.py
tests/: test_core.py
